--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
     <!--more videos-->
     <div class="video-container">
         <div class="video-embed">
-            <iframe width="100%" height="360" src="barbeibts.mp4" allowfullscreen="true" style="border:0;"
+            <iframe width="100%" height="360" src="barbeig.mp4" allowfullscreen="true" style="border:0;"
                 sandbox="allow-scripts allow-same-origin allow-popups allow-presentation"></iframe>
         </div>
         <div class="video-embed">
