--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                 sandbox="allow-scripts allow-same-origin allow-popups allow-presentation"></iframe>
         </div>
         <div class="video-embed">
-            <iframe width="100%" height="360" src="flashbts.mp4" allowfullscreen="true" style="border:0;"
+            <iframe width="100%" height="360" src="flashi.mp4" allowfullscreen="true" style="border:0;"
                 sandbox="allow-scripts allow-same-origin allow-popups allow-presentation"></iframe>
         </div>
     </div>
